--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  position: fixed;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 10vh;
+  width: 100%;
+  background-color: #1b1f29;
+  font-size: 30px;
+  z-index: 1;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.contener {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 10vh;
+  height: 90vh;
+}
+.weather {
+  height: 80%;
+  width: 45vw;
+  padding: 20px;
+  background-color: blueviolet;
+}
+.search-contener {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input {
+  height: 60px;
+  width: 60%;
+  border: none;
+  padding-left: 20px;
+}
+.image-contener {
+  display: flex;
+  justify-content: center;
+}
+.btn {
+  height: 63px;
+  width: 20%;
+  background-color: grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.city {
+  font-size: 35px;
+  color: white;
+  text-align: center;
+}
+
+.row {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+.info-title {
+  font-size: 25px;
+  text-align: center;
+}
+
+.info {
+  font-size: 35px;
+  text-align: center;
+}
+.msg {
+  text-align: center;
+  color: white;
 }
